modification for user administration module secured  user urls

--- a/templates/loginheader.html
+++ b/templates/loginheader.html
@@ -19,12 +19,12 @@
 					<div class="col-xs-3">
 						<div class="navbar-header">
 							
-							<a href='{{url_for("shelters")}}' class="navbar-brand">Sams Item Catalog</a>
+							<a href='{{url_for("catalog")}}' class="navbar-brand">Sams Item Catalog</a>
 						</div>
 					</div>
 					<div class="col-xs-4">
 						<ul class="nav navbar-nav">
-							<li>	<a href='{{url_for("shelters")}}' ><i class="fa fa-home"></i> Home</a></li>
+							<li>	<a href='{{url_for("catalog")}}' ><i class="fa fa-home"></i> Home</a></li>
 							<li><a href='{{url_for("puppies")}}' class="navbar-nav">Puppies</a></li>
 							<li><a href='{{url_for("users")}}' class="navbar-nav"><i class="fa fa-users"></i> Users</a></li>
 						</ul>
