--- a/templates/header.html
+++ b/templates/header.html
@@ -18,9 +18,12 @@
 					<div class="col-xs-4">
 						<ul class="nav navbar-nav">
 							<li>	<a href='{{url_for("catalog")}}' ><i class="fa fa-home"></i> Home</a></li>
-							<li><a href='{{url_for("puppies")}}' class="navbar-nav">Puppies</a></li>
+							<li><a href='{{url_for("categories")}}' class="navbar-nav"><i class="fa fa-list"></i> Categories</a></li>
+							<li><a href='{{url_for("users")}}' class="navbar-nav"><i class="fa fa-futbol-o"></i> Items</a></li>
 							<li><a href='{{url_for("users")}}' class="navbar-nav"><i class="fa fa-users"></i> Users</a></li>
-							{% if SESSION.username  %}
+							
+							
+							{% if isSomeoneLoggedIn()  %}
 								<li><a href='{{url_for("gdisconnect")}}' class="navbar-nav"><i class="fa fa-sign-out"></i> Logout</a></li>
 							{% else %}
 								<li><a href='{{url_for("login")}}' class="navbar-nav"><i class="fa fa-sign-in"></i> Login</a></li>
