--- a/templates/loginheader.html
+++ b/templates/loginheader.html
@@ -26,7 +26,7 @@
 						<ul class="nav navbar-nav">
 							<li>	<a href='{{url_for("catalog")}}' ><i class="fa fa-home"></i> Home</a></li>
 							<li><a href='{{url_for("categories")}}' class="navbar-nav"><i class="fa fa-list"></i> Categories</a></li>
-							<li><a href='{{url_for("users")}}' class="navbar-nav"><i class="fa fa-futbol-o"></i> Items</a></li>
+							<li><a href='{{url_for("items")}}' class="navbar-nav"><i class="fa fa-futbol-o"></i> Items</a></li>
 							<li><a href='{{url_for("users")}}' class="navbar-nav"><i class="fa fa-users"></i> Users</a></li>
 						</ul>
 						
