--- a/templates/header.html
+++ b/templates/header.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
+		<title>{{SESSION['app_name']}} {% if SESSION['page_title']%}- {{SESSION['page_title']}} {% endif %}</title>
 	</head>
 	<body class="container-fluid">
 		<nav class="navbar navbar-default">
