--- a/templates/category_list.html
+++ b/templates/category_list.html
@@ -1,6 +1,11 @@
 <div class="row">
     <div class='col-xs-6 heading'><h1> All Categories </h1></div>
-    <div class="col-xs-6 v-middle">{% if isAdminLoggedIn()  %}<a class='btn btn-primary' href ='{{url_for("new_category")}}' ><i class="fa fa-plus"></i> Add New Category </a>{% endif %}</div>
+    <div class="col-xs-6 v-middle">{% if isSomeoneLoggedIn()  %}
+        <a class='btn btn-primary' href ='{{url_for("new_category")}}' ><i class="fa fa-plus"></i> Add New Category </a>
+        {%else%}
+        <a class='btn btn-primary disabled' href ='' ><i class="fa fa-plus"></i> Add New Category </a>
+        {% endif %}
+    </div>
 </div>
 <div class="row">
     <div class='col-xs-1 header-el'>ID</div>
@@ -18,7 +23,7 @@
     <div class='col-xs-1'>{{category.id}}</div>
     <div class='col-xs-2 {% if category.hasChildren %} bold  {%endif%}'>{{category.name}}</div>
     <div class="col-xs-1">{{category.parent}}</div>
-    <div class='col-xs-1'>{{category.isActive}}</div>
+    <div class='col-xs-1'>{% if category.isActive%}<i class="fa fa-check text-success"></i>{%else%}<i class="fa fa-ban text-danger"></i>{%endif%}</div>
     <div class='col-xs-1'>{{category.hasChildren}}</div>
     <div class='col-xs-1'>{{category.created}}</div>
     <div class='col-xs-1'>{{category.lastupdated}}</div>
@@ -30,8 +35,11 @@
             <a class='btn btn-danger' href ='{{url_for("delete_category")}}' ><i class="fa fa-trash-o"></i> Delete</a>
         </div>
     {% else %}
-        <div class='col-xs-4 v-middle'>
-            
+        <div class='col-xs-2 v-middle'>
+            <a class='btn btn-primary disabled' href ='' alt="Login to Edit" ><i class="fa fa-pencil"></i> Edit</a>
+        </div>
+        <div class='col-xs-2 v-middle'>
+            <a class='btn btn-danger disabled' href ='' alt="Login to Delete"><i class="fa fa-trash-o"></i> Delete</a>
         </div>
     {% endif %}
 </div>
