--- a/templates/items_list.html
+++ b/templates/items_list.html
@@ -4,13 +4,12 @@
         {% if isSomeoneLoggedIn()  %}
         <a class='btn btn-primary' href ='{{url_for("new_item")}}' ><i class="fa fa-plus"></i> Add New Item </a>
         {% else %}
-            <a class='btn btn-primary disabled' href ='{{url_for("new_item")}}' ><i class="fa fa-plus"></i> Add New Item </a>
+            <a class='btn btn-primary disabled' href ='' ><i class="fa fa-plus"></i> Add New Item </a>
         {% endif %}
     </div>
 </div>
 <div class="row">
-    <div class='col-xs-1 header-el'>ID</div>
-    <div class='col-xs-2 header-el'> Item </div>
+    <div class='col-xs-3 header-el'> Item </div>
     <div class="col-xs-3 header-el"> Description </div>
     <div class='col-xs-1 header-el'> Active </div>
     <div class='col-xs-2 header-el'> Dates </div>
@@ -18,14 +17,14 @@
 </div>
 <hr />
 {%for item in items %}
-<div class="row">
-    <div class='col-xs-1'>{{item.id}}</div>
+<div class="row ">
+    <div class='col-xs-1'><img src="{% if item.pictureurl %}{{item.pictureurl}} {% else %} {{url_for('static', filename='images/img-not-found.png')}} {%endif%}" class="item-pic-small" /></div>
     <div class='col-xs-2'>{{item.name}}</br>
-        <span class="bold">Price Range: </span>{{item.pricerange}} </br>
-        <img src="{{item.pictureurl}}" class="item-pic-small"/>
+        <span class="bold">Price Range: </span>{{item.pricerange}}</br>
+        <span class="bold">Category: </span>{{get_category_name(item.category_id)}}
     </div>
     <div class="col-xs-3">{{item.description }}</div>
-    <div class='col-xs-1'>{{item.isActive}}</div>
+    <div class='col-xs-1 align-center'>{% if item.isActive%}<i class="fa fa-check text-success"></i>{%else%}<i class="fa fa-ban text-danger"></i>{%endif%}</div>
     <div class='col-xs-2'><span class="bold">Created: </span>{{item.created}} </br>
         <span class="bold">Last updated: </span>{{item.lastupdated}} 
     </div>
