--- a/templates/pages_list.html
+++ b/templates/pages_list.html
@@ -1,5 +1,5 @@
 <div class="row">
-<div class='col-xs-12 '>
+<div class='col-xs-12 align-center'>
     <div class=pagination>
         {% if pagination.hasPagesBefore %}
             <a href="{{ other_page_urls(pagination.current_page - 1)
