--- a/templates/items_catalog.html
+++ b/templates/items_catalog.html
@@ -1,12 +1,16 @@
 {% from "category_helper.html" import render_categories %}
 {% from "item_helper.html" import render_item %}
 <div class="row">
-	<div class="col-xs-2 heading"><h4>Categories</h4></div>
-	<div class="col-xs-10 heading"> <h4>Latest Items</h4></div>
+	<div class="categories-column catlog-heading"><h4>Categories</h4></div>
+	<div class="items-column"> <h4>Latest Items</h4>
+		{% if isSomeoneLoggedIn()  %}
+			<a class='btn btn-primary' href ='{{url_for("new_item")}}' ><i class="fa fa-plus"></i> Add New Item </a>
+		{% endif %}
+	</div>
 </div>
 <div class="row">
-	<div class="col-xs-2 ">{{render_categories(parent_categories,sub_categories)}}</div>
-	<div class="col-xs-10 ">
+	<div class="categories-column ">{{render_categories(parent_categories,sub_categories)}}</div>
+	<div class="items-column">
 		{{render_item(latest_items)}}
 		
 	</div>
